@@ -59,6 +59,14 @@ public class TestSpellChecking extends LuceneTestCase {
 
   public void testRepSuggestions() throws Exception {
     doTest("rep");
+
+    //noinspection DataFlowIssue
+    Path aff = Path.of(getClass().getResource("rep.aff").toURI());
+    Dictionary dictionary = TestAllDictionaries.loadDictionary(aff);
+    Suggester suggester = new Suggester(dictionary);
+    assertEquals(List.of("auto's"), suggester.suggestNoTimeout("autos", () -> {}));
+    assertEquals(
+        List.of("auto's", "auto"), suggester.proceedPastRep().suggestNoTimeout("autos", () -> {}));
   }
 
   public void testPhSuggestions() throws Exception {
@@ -330,7 +338,7 @@ public class TestSpellChecking extends LuceneTestCase {
     Set<String> everythingGenerated = new HashSet<>();
     boolean generatedEverything = true;
     try (Stream<String> lines = Files.lines(dic, speller.dictionary.decoder.charset())) {
-      for (String line : lines.skip(1).collect(Collectors.toList())) {
+      for (String line : lines.skip(1).toList()) {
         int len = (int) line.chars().takeWhile(c -> !Character.isWhitespace(c) && c != '/').count();
         String word = line.substring(0, len).trim();
         if (word.isEmpty() || word.contains("\\")) {
@@ -382,8 +390,7 @@ public class TestSpellChecking extends LuceneTestCase {
 
     if (expanded.stream().anyMatch(e -> e.getWord().equals(stem))) {
       EntrySuggestion suggestion =
-          hunspell.compress(
-              expanded.stream().map(AffixedWord::getWord).collect(Collectors.toList()));
+          hunspell.compress(expanded.stream().map(AffixedWord::getWord).toList());
       if (suggestion != null) {
         String message =
             ("Compression suggests a different stem from the original " + stem)
