@@ -30,7 +30,6 @@ import java.util.concurrent.Executor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 import org.apache.lucene.codecs.Codec;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
@@ -316,6 +315,7 @@ public class TestConcurrentMergeScheduler extends LuceneTestCase {
   }
 
   // LUCENE-4544
+  @SuppressForbidden(reason = "Thread sleep")
   public void testMaxMergeCount() throws Exception {
     Directory dir = newDirectory();
     IndexWriterConfig iwc =
@@ -334,7 +334,7 @@ public class TestConcurrentMergeScheduler extends LuceneTestCase {
 
     ConcurrentMergeScheduler cms =
         new ConcurrentMergeScheduler() {
-
+          @SuppressForbidden(reason = "Thread sleep")
           @Override
           protected void doMerge(MergeSource mergeSource, MergePolicy.OneMerge merge)
               throws IOException {
@@ -556,14 +556,12 @@ public class TestConcurrentMergeScheduler extends LuceneTestCase {
     ConcurrentMergeScheduler cms = new ConcurrentMergeScheduler();
     expectThrows(
         IllegalArgumentException.class,
-        () -> {
-          cms.setMaxMergesAndThreads(ConcurrentMergeScheduler.AUTO_DETECT_MERGES_AND_THREADS, 3);
-        });
+        () ->
+            cms.setMaxMergesAndThreads(ConcurrentMergeScheduler.AUTO_DETECT_MERGES_AND_THREADS, 3));
     expectThrows(
         IllegalArgumentException.class,
-        () -> {
-          cms.setMaxMergesAndThreads(3, ConcurrentMergeScheduler.AUTO_DETECT_MERGES_AND_THREADS);
-        });
+        () ->
+            cms.setMaxMergesAndThreads(3, ConcurrentMergeScheduler.AUTO_DETECT_MERGES_AND_THREADS));
   }
 
   public void testLiveMaxMergeCount() throws Exception {
@@ -698,6 +696,7 @@ public class TestConcurrentMergeScheduler extends LuceneTestCase {
   }
 
   // LUCENE-6094
+  @SuppressForbidden(reason = "Thread sleep")
   public void testHangDuringRollback() throws Throwable {
     Directory dir = newMockDirectory();
     IndexWriterConfig iwc = new IndexWriterConfig(new MockAnalyzer(random()));
@@ -797,13 +796,13 @@ public class TestConcurrentMergeScheduler extends LuceneTestCase {
 
           @Override
           public boolean isEnabled(String component) {
-            if (component.equals("MS")) return true;
-            return false;
+            return component.equals("MS");
           }
         });
     iwc.setMaxBufferedDocs(2);
     LogMergePolicy lmp = newLogMergePolicy();
     lmp.setMergeFactor(2);
+    lmp.setTargetSearchConcurrency(1);
     iwc.setMergePolicy(lmp);
 
     IndexWriter w = new IndexWriter(dir, iwc);
@@ -825,9 +824,7 @@ public class TestConcurrentMergeScheduler extends LuceneTestCase {
     for (Thread t : mergeThreadSet) {
       String name = t.getName();
       List<String> threadMsgs =
-          messages.stream()
-              .filter(line -> line.startsWith("merge thread " + name))
-              .collect(Collectors.toList());
+          messages.stream().filter(line -> line.startsWith("merge thread " + name)).toList();
       assertTrue(
           "Expected:·a·value·equal·to·or·greater·than·3,·got:"
               + threadMsgs.size()
@@ -880,15 +877,13 @@ public class TestConcurrentMergeScheduler extends LuceneTestCase {
 
     expectThrows(
         IllegalArgumentException.class,
-        () -> {
-          cms.setMaxMergesAndThreads(ConcurrentMergeScheduler.AUTO_DETECT_MERGES_AND_THREADS, 4);
-        });
+        () ->
+            cms.setMaxMergesAndThreads(ConcurrentMergeScheduler.AUTO_DETECT_MERGES_AND_THREADS, 4));
 
     expectThrows(
         IllegalArgumentException.class,
-        () -> {
-          cms.setMaxMergesAndThreads(4, ConcurrentMergeScheduler.AUTO_DETECT_MERGES_AND_THREADS);
-        });
+        () ->
+            cms.setMaxMergesAndThreads(4, ConcurrentMergeScheduler.AUTO_DETECT_MERGES_AND_THREADS));
 
     cms.setMaxMergesAndThreads(
         ConcurrentMergeScheduler.AUTO_DETECT_MERGES_AND_THREADS,
@@ -906,10 +901,11 @@ public class TestConcurrentMergeScheduler extends LuceneTestCase {
 
   public void testAutoIOThrottleGetter() throws Exception {
     ConcurrentMergeScheduler cms = new ConcurrentMergeScheduler();
-    cms.disableAutoIOThrottle();
     assertFalse(cms.getAutoIOThrottle());
     cms.enableAutoIOThrottle();
     assertTrue(cms.getAutoIOThrottle());
+    cms.disableAutoIOThrottle();
+    assertFalse(cms.getAutoIOThrottle());
   }
 
   public void testNonSpinningDefaults() throws Exception {
@@ -950,6 +946,7 @@ public class TestConcurrentMergeScheduler extends LuceneTestCase {
             super.doStall();
           }
         };
+    cms.enableAutoIOThrottle();
     cms.setMaxMergesAndThreads(2, 1);
     iwc.setMergeScheduler(cms);
     iwc.setMaxBufferedDocs(2);
