@@ -25,7 +25,6 @@ import java.util.Random;
 import java.util.SortedSet;
 import java.util.TreeSet;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.index.DirectoryReader;
 import org.apache.lucene.index.LeafReaderContext;
@@ -53,10 +52,8 @@ public class TestMultiCollectorManager extends LuceneTestCase {
     for (int iter = 0; iter < 100; iter++) {
       int docs = RandomNumbers.randomIntBetween(random(), 1000, 10000);
       SortedSet<Integer> expected = generateDocIds(docs, random());
-      List<Integer> expectedEven =
-          expected.stream().filter(evenPredicate).collect(Collectors.toList());
-      List<Integer> expectedOdd =
-          expected.stream().filter(oddPredicate).collect(Collectors.toList());
+      List<Integer> expectedEven = expected.stream().filter(evenPredicate).toList();
+      List<Integer> expectedOdd = expected.stream().filter(oddPredicate).toList();
 
       // Test only wrapping one of the collector managers:
       MultiCollectorManager mcm = new MultiCollectorManager(cm1);
@@ -92,28 +89,19 @@ public class TestMultiCollectorManager extends LuceneTestCase {
     LeafReaderContext ctx = reader.leaves().get(0);
 
     // no collector needs scores => no caching
-    CollectorManager<?, ?> cm1 = collectorManager(ScoreMode.COMPLETE_NO_SCORES, ScoreAndDoc.class);
-    CollectorManager<?, ?> cm2 = collectorManager(ScoreMode.COMPLETE_NO_SCORES, ScoreAndDoc.class);
-    new MultiCollectorManager(cm1, cm2)
-        .newCollector()
-        .getLeafCollector(ctx)
-        .setScorer(new ScoreAndDoc());
+    CollectorManager<?, ?> cm1 = collectorManager(ScoreMode.COMPLETE_NO_SCORES, Score.class);
+    CollectorManager<?, ?> cm2 = collectorManager(ScoreMode.COMPLETE_NO_SCORES, Score.class);
+    new MultiCollectorManager(cm1, cm2).newCollector().getLeafCollector(ctx).setScorer(new Score());
 
     // only one collector needs scores => no caching
-    cm1 = collectorManager(ScoreMode.COMPLETE, ScoreAndDoc.class);
-    cm2 = collectorManager(ScoreMode.COMPLETE_NO_SCORES, ScoreAndDoc.class);
-    new MultiCollectorManager(cm1, cm2)
-        .newCollector()
-        .getLeafCollector(ctx)
-        .setScorer(new ScoreAndDoc());
+    cm1 = collectorManager(ScoreMode.COMPLETE, Score.class);
+    cm2 = collectorManager(ScoreMode.COMPLETE_NO_SCORES, Score.class);
+    new MultiCollectorManager(cm1, cm2).newCollector().getLeafCollector(ctx).setScorer(new Score());
 
     // several collectors need scores => caching
     cm1 = collectorManager(ScoreMode.COMPLETE, ScoreCachingWrappingScorer.class);
     cm2 = collectorManager(ScoreMode.COMPLETE, ScoreCachingWrappingScorer.class);
-    new MultiCollectorManager(cm1, cm2)
-        .newCollector()
-        .getLeafCollector(ctx)
-        .setScorer(new ScoreAndDoc());
+    new MultiCollectorManager(cm1, cm2).newCollector().getLeafCollector(ctx).setScorer(new Score());
 
     reader.close();
     dir.close();
@@ -132,19 +120,13 @@ public class TestMultiCollectorManager extends LuceneTestCase {
     CollectorManager<?, ?> cm2 =
         collectorManager(
             ScoreMode.TOP_SCORES, MultiCollector.MinCompetitiveScoreAwareScorable.class);
-    new MultiCollectorManager(cm1, cm2)
-        .newCollector()
-        .getLeafCollector(ctx)
-        .setScorer(new ScoreAndDoc());
+    new MultiCollectorManager(cm1, cm2).newCollector().getLeafCollector(ctx).setScorer(new Score());
 
     // both wrapped collector managers need scores, but one is exhaustive, so they should
     // see a ScoreCachingWrappingScorer pass in as their scorer:
     cm1 = collectorManager(ScoreMode.COMPLETE, ScoreCachingWrappingScorer.class);
     cm2 = collectorManager(ScoreMode.TOP_SCORES, ScoreCachingWrappingScorer.class);
-    new MultiCollectorManager(cm1, cm2)
-        .newCollector()
-        .getLeafCollector(ctx)
-        .setScorer(new ScoreAndDoc());
+    new MultiCollectorManager(cm1, cm2).newCollector().getLeafCollector(ctx).setScorer(new Score());
 
     reader.close();
     dir.close();
@@ -306,7 +288,7 @@ public class TestMultiCollectorManager extends LuceneTestCase {
 
   private static CollectorManager<?, ?> collectorManager(
       ScoreMode scoreMode, Class<?> expectedScorer) {
-    return new CollectorManager<Collector, Object>() {
+    return new CollectorManager<>() {
 
       @Override
       public Collector newCollector() throws IOException {
