@@ -20,7 +20,6 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field.Store;
 import org.apache.lucene.document.StringField;
@@ -120,7 +119,8 @@ public class TestWANDScorer extends LuceneTestCase {
                 .add(
                     new BoostQuery(new ConstantScoreQuery(new TermQuery(new Term("foo", "C"))), 3),
                     Occur.SHOULD)
-                .build());
+                .build(),
+            random().nextBoolean());
 
     Weight weight = searcher.createWeight(searcher.rewrite(query), ScoreMode.TOP_SCORES, 1);
     ScorerSupplier ss = weight.scorerSupplier(searcher.getIndexReader().leaves().get(0));
@@ -181,7 +181,8 @@ public class TestWANDScorer extends LuceneTestCase {
                         .add(
                             new ConstantScoreQuery(new TermQuery(new Term("foo", "B"))),
                             Occur.SHOULD)
-                        .build()),
+                        .build(),
+                    random().nextBoolean()),
                 Occur.MUST)
             .add(new TermQuery(new Term("foo", "C")), Occur.FILTER)
             .build();
@@ -223,7 +224,8 @@ public class TestWANDScorer extends LuceneTestCase {
                         .add(
                             new ConstantScoreQuery(new TermQuery(new Term("foo", "B"))),
                             Occur.SHOULD)
-                        .build()),
+                        .build(),
+                    random().nextBoolean()),
                 Occur.MUST)
             .add(new TermQuery(new Term("foo", "C")), Occur.MUST_NOT)
             .build();
@@ -298,7 +300,8 @@ public class TestWANDScorer extends LuceneTestCase {
                             new ConstantScoreQuery(new TermQuery(new Term("foo", "C"))), 3),
                         Occur.SHOULD)
                     .setMinimumNumberShouldMatch(2)
-                    .build());
+                    .build(),
+                random().nextBoolean());
 
         Weight weight = searcher.createWeight(searcher.rewrite(query), ScoreMode.TOP_SCORES, 1);
         ScorerSupplier ss = weight.scorerSupplier(searcher.getIndexReader().leaves().get(0));
@@ -378,7 +381,8 @@ public class TestWANDScorer extends LuceneTestCase {
                     .add(new TermQuery(new Term("foo", "B")), Occur.SHOULD)
                     .add(new TermQuery(new Term("foo", "C")), Occur.SHOULD)
                     .setMinimumNumberShouldMatch(2)
-                    .build());
+                    .build(),
+                random().nextBoolean());
 
         Weight weight = searcher.createWeight(searcher.rewrite(query), ScoreMode.TOP_SCORES, 1);
         ScorerSupplier ss = weight.scorerSupplier(searcher.getIndexReader().leaves().get(0));
@@ -432,7 +436,8 @@ public class TestWANDScorer extends LuceneTestCase {
                             new ConstantScoreQuery(new TermQuery(new Term("foo", "C"))), 3),
                         Occur.SHOULD)
                     .setMinimumNumberShouldMatch(2)
-                    .build());
+                    .build(),
+                random().nextBoolean());
 
         Scorer scorer =
             searcher
@@ -490,7 +495,8 @@ public class TestWANDScorer extends LuceneTestCase {
                                     new ConstantScoreQuery(new TermQuery(new Term("foo", "D"))), 4),
                                 Occur.SHOULD)
                             .setMinimumNumberShouldMatch(2)
-                            .build()),
+                            .build(),
+                        random().nextBoolean()),
                     Occur.MUST)
                 .add(new TermQuery(new Term("foo", "C")), Occur.FILTER)
                 .build();
@@ -566,7 +572,8 @@ public class TestWANDScorer extends LuceneTestCase {
                                     new ConstantScoreQuery(new TermQuery(new Term("foo", "D"))), 4),
                                 Occur.SHOULD)
                             .setMinimumNumberShouldMatch(2)
-                            .build()),
+                            .build(),
+                        random().nextBoolean()),
                     Occur.MUST)
                 .add(new TermQuery(new Term("foo", "C")), Occur.FILTER)
                 .build();
@@ -626,7 +633,8 @@ public class TestWANDScorer extends LuceneTestCase {
                                     new ConstantScoreQuery(new TermQuery(new Term("foo", "D"))), 4),
                                 Occur.SHOULD)
                             .setMinimumNumberShouldMatch(2)
-                            .build()),
+                            .build(),
+                        random().nextBoolean()),
                     Occur.MUST)
                 .add(new TermQuery(new Term("foo", "C")), Occur.MUST_NOT)
                 .build();
@@ -700,7 +708,8 @@ public class TestWANDScorer extends LuceneTestCase {
                                     new ConstantScoreQuery(new TermQuery(new Term("foo", "D"))), 4),
                                 Occur.SHOULD)
                             .setMinimumNumberShouldMatch(2)
-                            .build()),
+                            .build(),
+                        random().nextBoolean()),
                     Occur.MUST)
                 .add(new TermQuery(new Term("foo", "C")), Occur.MUST_NOT)
                 .build();
@@ -745,7 +754,7 @@ public class TestWANDScorer extends LuceneTestCase {
         builder.add(
             maybeWrap(new TermQuery(new Term("foo", Integer.toString(start + i)))), Occur.SHOULD);
       }
-      Query query = new WANDScorerQuery(builder.build());
+      Query query = new WANDScorerQuery(builder.build(), random().nextBoolean());
 
       CheckHits.checkTopScores(random(), query, searcher);
 
@@ -796,7 +805,7 @@ public class TestWANDScorer extends LuceneTestCase {
                     0f)),
             Occur.SHOULD);
       }
-      Query query = new WANDScorerQuery(builder.build());
+      Query query = new WANDScorerQuery(builder.build(), random().nextBoolean());
 
       CheckHits.checkTopScores(random(), query, searcher);
 
@@ -856,7 +865,7 @@ public class TestWANDScorer extends LuceneTestCase {
         }
         builder.add(query, Occur.SHOULD);
       }
-      Query query = new WANDScorerQuery(builder.build());
+      Query query = new WANDScorerQuery(builder.build(), random().nextBoolean());
 
       CheckHits.checkTopScores(random(), query, searcher);
 
@@ -954,36 +963,25 @@ public class TestWANDScorer extends LuceneTestCase {
     @Override
     public Weight createWeight(IndexSearcher searcher, ScoreMode scoreMode, float boost)
         throws IOException {
-      return new FilterWeight(query.createWeight(searcher, scoreMode, boost)) {
-        @Override
-        public Scorer scorer(LeafReaderContext context) throws IOException {
-          Scorer scorer = super.scorer(context);
-          if (scorer == null) {
-            return null;
-          } else {
-            return new MaxScoreWrapperScorer(scorer, maxRange, maxScore);
-          }
-        }
-
+      var weight = query.createWeight(searcher, scoreMode, boost);
+      return new FilterWeight(weight) {
         @Override
         public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
-          ScorerSupplier supplier = super.scorerSupplier(context);
+          ScorerSupplier supplier = weight.scorerSupplier(context);
           if (supplier == null) {
             return null;
-          } else {
-            return new ScorerSupplier() {
-
-              @Override
-              public Scorer get(long leadCost) throws IOException {
-                return new MaxScoreWrapperScorer(supplier.get(leadCost), maxRange, maxScore);
-              }
-
-              @Override
-              public long cost() {
-                return supplier.cost();
-              }
-            };
           }
+          return new ScorerSupplier() {
+            @Override
+            public Scorer get(long leadCost) throws IOException {
+              return new MaxScoreWrapperScorer(supplier.get(leadCost), maxRange, maxScore);
+            }
+
+            @Override
+            public long cost() {
+              return supplier.cost();
+            }
+          };
         }
       };
     }
@@ -991,11 +989,13 @@ public class TestWANDScorer extends LuceneTestCase {
 
   private static class WANDScorerQuery extends Query {
     private final BooleanQuery query;
+    private final boolean doBlocks;
 
-    private WANDScorerQuery(BooleanQuery query) {
+    private WANDScorerQuery(BooleanQuery query, boolean doBlocks) {
       assert query.clauses().size() == query.getClauses(Occur.SHOULD).size()
           : "This test utility query is only used to create WANDScorer for disjunctions.";
       this.query = query;
+      this.doBlocks = doBlocks;
     }
 
     @Override
@@ -1010,7 +1010,7 @@ public class TestWANDScorer extends LuceneTestCase {
         }
 
         @Override
-        public Scorer scorer(LeafReaderContext context) throws IOException {
+        public ScorerSupplier scorerSupplier(LeafReaderContext context) throws IOException {
           BooleanWeight weight = (BooleanWeight) query.createWeight(searcher, scoreMode, boost);
           List<Scorer> optionalScorers =
               weight.weightedClauses.stream()
@@ -1032,14 +1032,20 @@ public class TestWANDScorer extends LuceneTestCase {
                           throw new AssertionError(e);
                         }
                       })
-                  .collect(Collectors.toList());
-
+                  .toList();
+          final Scorer scorer;
           if (optionalScorers.size() > 0) {
-            return new WANDScorer(
-                weight, optionalScorers, query.getMinimumNumberShouldMatch(), scoreMode);
+            scorer =
+                new WANDScorer(
+                    optionalScorers,
+                    query.getMinimumNumberShouldMatch(),
+                    scoreMode,
+                    doBlocks ? Long.MAX_VALUE : 0L);
           } else {
-            return weight.scorer(context);
+            scorer = weight.scorer(context);
+            if (scorer == null) return null;
           }
+          return new DefaultScorerSupplier(scorer);
         }
 
         @Override
