@@ -83,7 +83,7 @@ public final class RamUsageTester {
    * referenced objects.
    *
    * <p><b>Resource Usage:</b> This method internally uses a set of every object seen during
-   * traversals so it does allocate memory (it isn't side-effect free). After the method exits, this
+   * traversals so it does allocate memory (it isn't side effect free). After the method exits, this
    * memory should be GCed.
    */
   public static long ramUsed(Object obj, Accumulator accumulator) {
@@ -113,7 +113,7 @@ public final class RamUsageTester {
    */
   private static long measureObjectSize(Object root, Accumulator accumulator) {
     // Objects seen so far.
-    final Set<Object> seen = Collections.newSetFromMap(new IdentityHashMap<Object, Boolean>());
+    final Set<Object> seen = Collections.newSetFromMap(new IdentityHashMap<>());
     // Class cache with reference Field and precalculated shallow size.
     final IdentityHashMap<Class<?>, ClassCache> classCache = new IdentityHashMap<>();
     // Stack of objects pending traversal. Recursion caused stack overflows.
@@ -194,9 +194,7 @@ public final class RamUsageTester {
       } else if (isJavaModule.test(obClazz) && ob instanceof Map) {
         final List<Object> values =
             ((Map<?, ?>) ob)
-                .entrySet().stream()
-                    .flatMap(e -> Stream.of(e.getKey(), e.getValue()))
-                    .collect(Collectors.toList());
+                .entrySet().stream().flatMap(e -> Stream.of(e.getKey(), e.getValue())).toList();
         return accumulator.accumulateArray(
                 ob,
                 alignedShallowInstanceSize + RamUsageEstimator.NUM_BYTES_ARRAY_HEADER,
@@ -246,7 +244,7 @@ public final class RamUsageTester {
       values = Collections.emptyList();
     } else {
       values =
-          new AbstractList<Object>() {
+          new AbstractList<>() {
 
             @Override
             public Object get(int index) {
@@ -267,10 +265,9 @@ public final class RamUsageTester {
    * their public properties. This is needed for Java 9, which does not allow to look into runtime
    * class fields.
    */
-  @SuppressWarnings("serial")
   private static final Map<Class<?>, ToLongFunction<Object>> SIMPLE_TYPES =
       Collections.unmodifiableMap(
-          new IdentityHashMap<Class<?>, ToLongFunction<Object>>() {
+          new IdentityHashMap<>() {
             {
               init();
             }
@@ -310,59 +307,55 @@ public final class RamUsageTester {
           });
 
   /** Cached information about a given class. */
-  private static final class ClassCache {
-    public final long alignedShallowInstanceSize;
-    public final Field[] referenceFields;
-
-    public ClassCache(long alignedShallowInstanceSize, Field[] referenceFields) {
-      this.alignedShallowInstanceSize = alignedShallowInstanceSize;
-      this.referenceFields = referenceFields;
-    }
-  }
+  private record ClassCache(long alignedShallowInstanceSize, Field[] referenceFields) {}
 
   /** Create a cached information about shallow size and reference fields for a given class. */
   @SuppressForbidden(reason = "We need to access private fields of measured objects.")
   private static ClassCache createCacheEntry(final Class<?> clazz) {
-    return AccessController.doPrivileged(
-        (PrivilegedAction<ClassCache>)
-            () -> {
-              ClassCache cachedInfo;
-              long shallowInstanceSize = RamUsageEstimator.NUM_BYTES_OBJECT_HEADER;
-              final ArrayList<Field> referenceFields = new ArrayList<>(32);
-              for (Class<?> c = clazz; c != null; c = c.getSuperclass()) {
-                if (c == Class.class) {
-                  // prevent inspection of Class' fields, throws SecurityException in Java 9!
-                  continue;
-                }
-                final Field[] fields = c.getDeclaredFields();
-                for (final Field f : fields) {
-                  if (!Modifier.isStatic(f.getModifiers())) {
-                    shallowInstanceSize = RamUsageEstimator.adjustForField(shallowInstanceSize, f);
+    @SuppressWarnings("removal")
+    ClassCache classCache =
+        AccessController.doPrivileged(
+            (PrivilegedAction<ClassCache>)
+                () -> {
+                  ClassCache cachedInfo;
+                  long shallowInstanceSize = RamUsageEstimator.NUM_BYTES_OBJECT_HEADER;
+                  final ArrayList<Field> referenceFields = new ArrayList<>(32);
+                  for (Class<?> c = clazz; c != null; c = c.getSuperclass()) {
+                    if (c == Class.class) {
+                      // prevent inspection of Class' fields, throws SecurityException in Java 9!
+                      continue;
+                    }
+                    final Field[] fields = c.getDeclaredFields();
+                    for (final Field f : fields) {
+                      if (!Modifier.isStatic(f.getModifiers())) {
+                        shallowInstanceSize =
+                            RamUsageEstimator.adjustForField(shallowInstanceSize, f);
 
-                    if (!f.getType().isPrimitive()) {
-                      try {
-                        f.setAccessible(true);
-                        referenceFields.add(f);
-                      } catch (RuntimeException re) {
-                        throw new RuntimeException(
-                            String.format(
-                                Locale.ROOT,
-                                "Can't access field '%s' of class '%s' for RAM estimation.",
-                                f.getName(),
-                                clazz.getName()),
-                            re);
+                        if (!f.getType().isPrimitive()) {
+                          try {
+                            f.setAccessible(true);
+                            referenceFields.add(f);
+                          } catch (RuntimeException re) {
+                            throw new RuntimeException(
+                                String.format(
+                                    Locale.ROOT,
+                                    "Can't access field '%s' of class '%s' for RAM estimation.",
+                                    f.getName(),
+                                    clazz.getName()),
+                                re);
+                          }
+                        }
                       }
                     }
                   }
-                }
-              }
 
-              cachedInfo =
-                  new ClassCache(
-                      RamUsageEstimator.alignObjectSize(shallowInstanceSize),
-                      referenceFields.toArray(new Field[referenceFields.size()]));
-              return cachedInfo;
-            });
+                  cachedInfo =
+                      new ClassCache(
+                          RamUsageEstimator.alignObjectSize(shallowInstanceSize),
+                          referenceFields.toArray(new Field[0]));
+                  return cachedInfo;
+                });
+    return classCache;
   }
 
   private static long byteArraySize(int len) {
